--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <center>
       <h1>Zasada zachowania pędu</h1>
-        <dfn>jeśli wyznaczymy pęd całkowity układu w pewnej chwili czasu, to w każdej następnej chwili czasu pęd układu pozostaje niezmieniony. W szczególności, jeśli pęd całkowity jest równy zeru to pozostaje on równy zeru.</dfn><br>
+        <dfn>jeśli wyznaczymy pęd całkowity układu w pewnej chwili czasu, to w każdej następnej chwili czasu pęd układu pozostaje niezmieniony. <br> W szczególności, jeśli pęd całkowity jest równy zeru to pozostaje on równy zeru.</dfn><br>
       <video controls>
         <source src="Dos.mp4">
         Twoja przeglądarka nie obsługuje wyświetlania wideo
